Seems to differentiate.