@@ -1,13 +1,12 @@
 //> using scala 3.6.2
 
 //> using dep io.github.quafadas::scautable:0.0.18
-//> using dep io.github.quafadas::vecxt::0.0.24
+//> using dep io.github.quafadas::vecxt::0.0.24-12-382848
 //> using dep io.github.quafadas::dedav4s:0.9.3
 //> using dep org.apache.commons:commons-math3:3.6.1
 //> using dep org.typelevel::spire::0.18.0
 
 //> using test.dep org.scalameta::munit::1.1.0
-
 
 //> using options "-experimental" "-language:experimental.namedTuples"
 
@@ -15,3 +14,4 @@
 
 //> using resourceDir "./data"
 
+//> using javaOpt "--add-modules=jdk.incubator.vector"
